added explore and half pod details page

--- a/shared/config/locale/uz/resources.json
+++ b/shared/config/locale/uz/resources.json
@@ -147,7 +147,7 @@
     "noPodsAvailable": "Hozircha mavjud podlar yo'q",
     "clearFilters": "Qidiruv va filtrlarni tozalash",
     "title": "Podlarni izlash",
-    "searchPlaceholder": "qidiring...",
+    "searchPlaceholder": "Qidiring",
     "allPods": "Barcha Podlar",
     "filter": "Filtr"
   },
