--- a/shared/config/locale/ru/resources.json
+++ b/shared/config/locale/ru/resources.json
@@ -330,5 +330,11 @@
     "agree": "Регистрируясь, вы подтверждаете полное согласие с <1>этими условиями</1>.",
     "mustAgree": "Пожалуйста, подтвердите согласие с условиями перед регистрацией."
   },
-  "sessionLimitError": "Вы не можете забронировать более 2 активных сессий в выбранный день"
+  "sessionLimitError": "Вы не можете забронировать более 2 активных сессий в выбранный день",
+  "gender": "Пол",
+  "genderPlaceholder": "Выберите пол",
+  "male": "Мужской",
+  "female": "Женский",
+  "gender_updated": "Пол успешно обновлен",
+  "update_failed": "Ошибка при обновлении"
 }
